support async operations (#83)
* Switch to async operations

* Allow setting executor for client